[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[project]
name = "argb"
version = "0.0.1"
description = "argb - use your LEDs as system monitor"
authors = [
    { name = "Quantum Snowball", email = "quantum.snowball@gmail.com" }
]
dependencies = [
    'click',
    'psutil',
    'openrgb-python',
    'nvidia-ml-py',
]

[project.urls]
Homepage = "https://github.com/quantumsnowball/argb"

[project.scripts]
argb = "argb:argb"

